[gd_scene load_steps=2 format=3 uid="uid://b82iibq8fpgqn"]

[ext_resource type="Script" uid="uid://dvq0k3sxpd7x0" path="res://Editor/NoteInfo.gd" id="1_feaks"]

[node name="Note Info" type="PanelContainer"]
offset_right = 100.0
offset_bottom = 109.0
script = ExtResource("1_feaks")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="InfoVBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Start Time" type="TextEdit" parent="MarginContainer/InfoVBox"]
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
text = "00:00:000"
placeholder_text = "00:00:000"

[node name="End Time" type="TextEdit" parent="MarginContainer/InfoVBox"]
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
text = "00:00:000"
placeholder_text = "00:00:000"

[node name="SFX" type="TextEdit" parent="MarginContainer/InfoVBox"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "SFX: TODO"
editable = false

[node name="Locked" type="CheckBox" parent="MarginContainer/InfoVBox"]
layout_mode = 2
text = "Locked"

[node name="Power" type="CheckBox" parent="MarginContainer/InfoVBox"]
layout_mode = 2
text = "Power"

[connection signal="focus_exited" from="MarginContainer/InfoVBox/Start Time" to="." method="_on_start_time_focus_exited"]
[connection signal="text_changed" from="MarginContainer/InfoVBox/Start Time" to="." method="_on_start_time_text_changed"]
[connection signal="focus_exited" from="MarginContainer/InfoVBox/End Time" to="." method="_on_end_time_focus_exited"]
[connection signal="text_changed" from="MarginContainer/InfoVBox/End Time" to="." method="_on_end_time_text_changed"]
[connection signal="pressed" from="MarginContainer/InfoVBox/Locked" to="." method="_on_locked_pressed"]
[connection signal="pressed" from="MarginContainer/InfoVBox/Power" to="." method="_on_power_pressed"]
